# fb2epub

./: Cargo.toml  LICENSE  README.md  new_book.epub
.github/workflows/: CI.yml
assets/: stylesheet.css
src/: epub_creator.rs  fb2_parser.rs  lib.rs  main.rs  zip_reader.rs
src/epub_creator/: html_builder.rs
src/fb2_parser/: binary_reader.rs  content_reader.rs  metadata_reader.rs
